# SDPD-2

./: .gitignore  config.toml  eda_notebook.ipynb  import.py  pyproject.toml
.airflow/: airflow.cfg  airflow.db  airflow.db-shm  airflow.db-wal  simple_auth_manager_passwords.json.generated
dags/: tripadvisor_etl_pipeline.py
