[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.8",
    "kagglehub>=1.0.0",
    "pandas>=3.0.1",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "jupyter>=1.0.0",
    "scikit-learn>=1.3.0",
    "kafka-python>=2.0.0",
]
